Added props to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "squiz-nz-react-redux-starter-kit",
   "version": "0.1.0",
+  "description": "Starter kit for gettting started with React, Redux, and React-Router!",
+  "main": "index.js",
   "private": true,
   "devDependencies": {
     "enzyme": "^2.6.0",
