--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-logger": "^2.7.4",
+    "redux-logger": "^2.10.2",
     "redux-promise-middleware": "^4.2.0",
-    "redux-thunk": "^2.1.0"
+    "redux-responsive": "^4.1.1",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
