--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "private": true,
   "devDependencies": {
     "enzyme": "^2.6.0",
-    "react-addons-test-utils": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-scripts": "0.8.4"
+    "react-dom": "^15.5.0",
+    "react-scripts": "0.8.4",
+    "react-test-renderer": "^15.5.4"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "prop-types": "^15.5.8",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react": "^15.5.0",
+    "react-dom": "^15.5.0",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
