--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "enzyme": "^2.6.0",
     "react-dom": "^15.5.4",
     "react-scripts": "0.8.4",
-    "react-test-renderer": "^15.5.4"
+    "react-test-renderer": "^15.5.4",
+    "redux-logger": "^3.0.6"
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -19,7 +20,6 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-logger": "^3.0.6",
     "redux-responsive": "^4.1.1",
     "redux-thunk": "^2.2.0"
   },
